--- a/packages/client/src/layouts/global.css
+++ b/packages/client/src/layouts/global.css
@@ -3,3 +3,7 @@ body {
   background: rgb(245,130,91);
   background: linear-gradient(118deg, rgba(245,130,91,1) 4%, rgba(252,164,105,1) 22%, rgba(247,203,89,1) 40%, rgba(169,208,46,1) 76%);
 }
+
+nav .x-logo-text {
+  font-family: 'Permanent Marker', sans-serif;
+}
