--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Squada+One&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Squada One', sans-serif;
+}
+
+body {
+  @apply text-gray-800;
+}
